--- a/navButtons.html
+++ b/navButtons.html
@@ -58,7 +58,7 @@
 
 
 
-<ul class="nav nav-stacked">
+<ul class="nav nav-stacked" data-hover="dropdown">
     <li>
         <div class="btn-group "> <a class="btn btn-primary dropdown-toggle open " data-toggle="dropdown" data-hover="dropdown" href="#">
         shop By Category
@@ -90,7 +90,7 @@
                 <li id="Desktop"  class="dropdown-submenu">
                 <a  href="#">Desktop</a>
                 <ul class="dropdown-menu" >
-                  <li><a tabindex="-1" href="#">HP</a></li>
+                  <li><a tabindex="-1" href="/MRROBOT./aa">HP</a></li>
                   <li><a href="#">Samsung</a></li>
                   <li><a href="#">ASUS</a></li>
                 </ul>
